# petfacts

./: .gitignore  README.md  config.ini  install  petfacts  pyproject.toml  requirements.txt  setup.cfg
petfacts/: petfacts.py
petfacts/lib/: Animal.py  AnimalGetter.py  CreateImage.py  Parser.py
src/petfacts/: petfacts.py
src/petfacts/lib/: AnimalGetter.py  CreateImage.py  Parser.py  TextModifier.py
