[metadata]
name = petfacts
version = 1.0
author = Mark Allen Waid Jr
author_email = codecannamw@gmail.com
description = A simple program for displaying cat or dog facts.
long_description = file: README.md
long_description_content = text/markdown
url = https://github.com/CodeCanna/petfacts

classifiers = Programming Language :: Python :: 3
License :: OSI Approved :: MIT License Operating System :: OS Independent

[options]
package_dir == src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src